tests/ui/sized/recursive-type-2.stderr
error[E0391]: cycle detected when computing layout of `Foo<()>`
   |
   = note: ...which requires computing layout of `<() as A>::Assoc`...
   = note: ...which again requires computing layout of `Foo<()>`, completing the cycle
note: cycle used when elaborating drops for `main`
  --> $DIR/recursive-type-2.rs:11:1
   |
LL | fn main() {
   | ^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
